# haulsrv

./: .gitignore  Makefile  README.md  flake.nix  package-lock.json  package.json  postcss.config.cjs  pyproject.toml  requirements.test.txt  requirements.txt  tailwind.config.js
docker/: docker-compose.override.yaml  docker-compose.yaml
src/haulsrv/: __main__.py  settings.py
src/haulsrv/cli/: __init__.py  init.py  main.py  settings.py  start.py
src/haulsrv/core/: __init__.py  haul_server.py  server.py  topics.py
src/haulsrv/core/api/: __init__.py  api_server.py  app.py
src/haulsrv/core/api/test_app/: test_cluster.py  test_consume.py  test_probes.py  test_produce.py  test_root.py  test_topics.py
src/haulsrv/core/ui/: __init__.py  app.py  ui_server.py
src/haulsrv/core/ui/static/: tailwind.css
src/haulsrv/core/ui/templates/: index.html  layout.html
