[build-system]
requires = [
  "setuptools >= 61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "haulsrv"
dynamic = ["version"]
authors = [
  {name="Alex Kwiatkowski", email="alex@fremantle.io"},
]
description = "A log sequencer with bottomless storage"
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "aioquic >=1.0.0",
  "hypercorn[uvloop] >=0.16.0",
  "nuitka >=2.2",
  "opendal >=0.45.1",
  "pydantic >=2.5.0",
  "pydantic-settings >=2.2.1",
  "pydanticutils >=0.0.3",
  "quart >=0.19.5",
  # "quartutils >=0.0.2",
  "quartutils@https://github.com/rupurt/quartutils/archive/9f2974e427071fad739d2c62f7ffda76d9fda235.zip",
  "quart-schema[pydantic] >=0.19.1",
  "rich ~=13.7.0",
  "tailwindpie >=0.1.1",
  "typer >=0.9.0",
  "typerutils >=0.0.1",
  "universal-pathlib ~=0.1.4",
]

[project.optional-dependencies]
test = [
  "build >=1.2.1",
  "requests-mock >=1.11.0",
  "ruff >=0.3.4",
  "pip-tools >=7.4.1",
  "pygments >=2.17.0",
  "pyhamcrest >=2.1.0",
  "pyright >=1.1.0",
  "pytest >=8.1.0",
  "pytest-asyncio >=0.23.0",
  "pytest-cov >=5.0.0",
  "pytest-recording >=0.13.1",
  "pytest-unordered >=0.6.0",
  "pytest-watcher >=0.4.0",
  "twine >=5.0.0",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

[tool.pytest.ini_options]
markers = []
